scrollbar fix again

--- a/web/nav/css/nav.less
+++ b/web/nav/css/nav.less
@@ -10,12 +10,12 @@ nav {
 }
 #subnav {
 	padding: 0 0 0 20px;
-	overflow-y: scroll;
-	-ms-overflow-style: none;  /* hide scrollbar: IE and Edge */
+	overflow-x: scroll;
+	-ms-overflow-style: none;  /* hide scrollbar: IE, Edge */
 	scrollbar-width: none;  /* hide scrollbar: Firefox */
 }
 #subnav::-webkit-scrollbar {
-	display: none; /* hide scrollbar: Safari */
+	display: none; /* hide scrollbar: Safari, Chrome, Opera */
 }
 #mainnav,
 #subnav {
